--- a/css/reserve.scss
+++ b/css/reserve.scss
@@ -628,15 +628,15 @@ select:hover{
         content: '';
         background-color: rgba(255, 166, 0, 0.2);
         width: 0%;
-        height: 100%;
+        top: 0;
+        bottom: 0;
         position: absolute;
         right: 0;
         transition: 0.4s;
-        clip-path: polygon(0 0, 50% 0, 100% 50%, 50% 100%, 0 100%)
+        clip-path: polygon(0 0, 50% 0, 100% 50%, 50% 100%, 0 100%);
     }
     .table_order td:hover::before {
         width: 100%;
-        
         left: 0;
     }
     td {
